--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,11 @@
 
     <dimen name="lsq_bottom_height">220dp</dimen>
 
+    <dimen name="lsq_title_height">50dp</dimen>
+
+    <dimen name="lsq_font_space_15">15dp</dimen>
+
+
     <dimen name="lsq__space_140">140dp</dimen>
     <dimen name="lsq__space_110">110dp</dimen>
     <dimen name="lsq__space_100">100dp</dimen>
