--- a/app/src/main/res/layout/activity_new_record_full_screen.xml
+++ b/app/src/main/res/layout/activity_new_record_full_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.tusdk.pulse.filter.FilterDisplayView
+    <FrameLayout
         android:id="@+id/lsq_cameraView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
