--- a/app/src/main/res/layout/record_more_config_layout.xml
+++ b/app/src/main/res/layout/record_more_config_layout.xml
@@ -338,4 +338,48 @@
 
     </RelativeLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginLeft="@dimen/lsq__space_15"
+        android:layout_marginRight="@dimen/lsq__space_15"
+        android:alpha="0.1"
+        android:background="@color/lsq_color_white" />
+
+    <RelativeLayout
+        android:visibility="visible"
+        android:id="@+id/lsq_render_layer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/lsq__space_15"
+            android:layout_centerVertical="true"
+            android:text="@string/lsq_render_layer"
+            android:textColor="@color/lsq_alpha_white_66"
+            android:textSize="@dimen/lsq_font_size_24" />
+
+        <TextView
+            android:id="@+id/lsq_render_720"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:padding="@dimen/lsq__space_15"
+            android:text="@string/lsq_render_720P"
+            android:textColor="@color/lsq_widget_speedbar_button_bg"
+            android:textSize="@dimen/lsq_font_size_24" />
+
+        <TextView
+            android:id="@+id/lsq_render_1080"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/lsq_render_720"
+            android:padding="@dimen/lsq__space_15"
+            android:text="@string/lsq_render_1080P"
+            android:textColor="@color/lsq_color_white"
+            android:textSize="@dimen/lsq_font_size_24" />
+
+    </RelativeLayout>
+
 </LinearLayout>
